crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_remove_yes_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&assert)
---
{
  "removed": {
    "algorithm": "sha1",
    "counter": null,
    "created_at": "[timestamp]",
    "digits": 6,
    "icon_hint": "acme",
    "id": "[uuid]",
    "issuer": "Acme",
    "kind": "totp",
    "label": "alice",
    "period": 30,
    "updated_at": "[timestamp]"
  }
}
