crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_rename_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&assert)
---
{
  "account": {
    "algorithm": "sha1",
    "counter": null,
    "created_at": "[timestamp]",
    "digits": 6,
    "icon_hint": "acme",
    "id": "[uuid]",
    "issuer": "Acme",
    "kind": "totp",
    "label": "alice2",
    "period": 30,
    "updated_at": "[timestamp]"
  }
}
