crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_settings_set_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stdout_json(&assert)
---
{
  "auto_lock": {
    "enabled": true,
    "timeout_secs": 300
  },
  "clipboard": {
    "clear_enabled": false,
    "clear_secs": 20
  }
}
