crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_unsupported_format_version_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stderr_json(&assert)
---
{
  "error_kind": "unsupported_format_version",
  "format_ver": 2
}
