crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_validation_error_unknown_subcommand_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stderr_json(&assert)
---
{
  "error_kind": "validation_error",
  "field": "argv",
  "reason": "usage"
}
