crates/paladin-cli/tests/snapshots/cli_json_snapshots__snapshot_vault_missing_envelope.snap
---
source: crates/paladin-cli/tests/cli_json_snapshots.rs
expression: parse_stderr_json(&assert)
---
{
  "error_kind": "vault_missing"
}
